# optimized-price-point-book

./: .gitignore  CMakeLists.txt  Dockerfile  OrderBook.cpp  OrderBook.h  OrderBookArray.cpp  OrderBookArray.h  OrderBookManager.cpp  OrderBookManager.h  OrderBooksCollection.cpp  OrderBooksCollection.h  README.md  Utilities.h  main  main.cpp
src/: BinanceSnapshotFetcher.cpp  BinanceSnapshotFetcher.h  BinanceWebSocketListener.cpp  BinanceWebSocketListener.h  OrderBook.cpp  OrderBook.h  OrderBookArray.cpp  OrderBookArray.h  OrderBooksCollection.cpp  OrderBooksCollection.h
tests/: testOrderBook.cpp
